Recovered commit, removed sensitive token